# PatchBukkit

./: PR_DESCRIPTION.md  README.md  build.sh
.github/workflows/: rust.yml
java/patchbukkit/: build.gradle.kts
java/patchbukkit-test-plugin/src/main/java/org/patchbukkit/testplugin/: DynamicTestProvider.java  PatchBukkitTestPlugin.java  TestCategory.java  TestFramework.java
java/patchbukkit-test-plugin/src/main/java/org/patchbukkit/testplugin/tests/: LegacyMaterialTests.java  SchedulerTests.java  ServicesManagerTests.java
java/patchbukkit/src/main/java/org/patchbukkit/: PatchBukkitBlockData.java  PatchBukkitLegacy.java  PatchBukkitServer.java  PatchBukkitServicesManager.java  PatchBukkitUnsafeValues.java
java/patchbukkit/src/main/java/org/patchbukkit/entity/: PatchBukkitEntity.java  PatchBukkitHumanEntity.java  PatchBukkitPlayer.java
java/patchbukkit/src/main/java/org/patchbukkit/events/: PatchBukkitEventFactory.java  PatchBukkitEventManager.java
java/patchbukkit/src/main/java/org/patchbukkit/inventory/: PatchBukkitInventory.java  PatchBukkitPlayerInventory.java
java/patchbukkit/src/main/java/org/patchbukkit/scheduler/: PatchBukkitScheduler.java  PatchBukkitTask.java
java/patchbukkit/src/main/java/org/patchbukkit/world/: PatchBukkitWorld.java
proto/patchbukkit/: bridge.proto  inventory.proto  itemstack.proto
proto/patchbukkit/events/: event.proto  player_events.proto
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: directories.rs  lib.rs
rust/src/commands/: mod.rs
rust/src/events/: handler.rs
rust/src/java/: resources.rs
rust/src/java/native_callbacks/: config.rs  events.rs  inventory.rs  mod.rs
rust/src/java/plugin/: command_manager.rs
rust/src/proto/: mod.rs
